--- a/for-movie-lovers/src/App.css
+++ b/for-movie-lovers/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: #37ab2e;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
