--- a/for-movie-lovers/src/index.css
+++ b/for-movie-lovers/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'proxima', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +8,15 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: 'proxima', source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@font-face {
+  font-family: 'proxima';
+  src:
+    url('https://cdn.woorkup.com/fonts/proximasoft-bold-webfont.woff2') format('woff2'),
+    url('https://cdn.woorkup.com/fonts/proximasoft-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
